--- a/changelog/release-highlights/recent-changes.mdx
+++ b/changelog/release-highlights/recent-changes.mdx
@@ -1,127 +1,151 @@
 ---
-title: "Recent Changes and New Features"
-description: "Highlights the latest capabilities, enhancements, and interface improvements included with each release. Helps users quickly assess what’s new and how updates may benefit their test environments or workflows."
+title: "Recent Changes"
+description: "Provides a quick-glance list of notable additions, improvements, and bug fixes introduced in recent releases. Enables users to stay up-to-date and leverage new capabilities."
 ---
 
-# Recent Changes and New Features
+# Recent Changes
 
-Stay up to date with the latest capabilities, improvements, and interface enhancements introduced in each GoogleTest release. This changelog page enables you to quickly assess new functionality and understand how upgrades can optimize your test environment and workflow.
-
----
-
-## Latest Release Highlights
-
-### Version 1.17.0
-*Release Date: Refer to [Release 1.17.0](https://github.com/google/googletest/releases/tag/v1.17.0)*
-
-- **Minimum C++ Standard Requirement Increased to C++17**
-  - Starting from 1.17.x, GoogleTest requires a C++17-compliant compiler, marking a modernization milestone that ensures compatibility with modern C++ features and promotes cleaner code.
-
-- **Documentation Migration**
-  - The official documentation is now hosted on GitHub Pages for easier access and improved navigation: https://google.github.io/googletest/
-
-- **Integration Tidying**
-  - The repository merges GoogleTest and GoogleMock, streamlining building and usage.
-  - CMake support is enhanced, allowing standalone and embedded project builds with simplified configuration.
-
-- **Code Modernization & API Stability**
-  - Internal improvements to support thread safety, better test registration, and flag handling while preserving backward compatibility where possible.
-
-- **New Build Options and Tweaks**
-  - CMake option to build without GoogleMock when users want GoogleTest only (`-DBUILD_GMOCK=OFF`).
-  - Support for Visual Studio runtime library dynamic linking through `gtest_force_shared_crt` option.
+Stay current with the latest updates in GoogleTest and GoogleMock by reviewing this quick reference of notable improvements, feature additions, and bug fixes. This page helps you quickly understand the practical impact of recent releases, so you can leverage new capabilities effectively.
 
 ---
 
-## Recent Feature Additions
+## 1. Key Updates and Improvements
 
-### Test Discovery and Execution
-- Tests are automatically discovered and registered via macro usage (`TEST()`, `TEST_F()`), now fully supporting typed and parameterized tests.
-- Allows selective test execution with the enhanced `--gtest_filter` flag supporting glob patterns and exclusion lists.
+### Enhanced Strictness Modifiers
+- Introduction of convenient wrappers `NiceMock`, `NaggyMock`, and `StrictMock` that let you control warnings and failures for unexpected or uninteresting mock calls at the mock object level.
+- These wrappers inherit constructors from your mock classes, simplifying usage.
+- Usage tips and limitations documented to avoid common pitfalls with inheritance and destructors.
 
-### Enhanced Assertion Macros
-- Wide coverage of assertions including Boolean checks, equality, string comparison, exceptions, and floating point near-equality.
-- Fatal (`ASSERT_*`) and non-fatal (`EXPECT_*`) failures clearly distinguished to guide proper error handling strategies.
+### Expanded Spec Builder Syntax Support
+- Full support for chaining expectation modifiers like `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()`.
+- Runtime enforcement of clause ordering and cardinality constraints to detect specification errors early.
+- Improved flexibility for setting expectations that require complex argument matching, cardinalities, and call ordering.
 
-### Test Parameterization
-- Added support for value-parameterized (`TEST_P`) and type-parameterized tests, enabling concise yet powerful test case expansions.
-- Registry and automatic instantiation mechanisms streamline writing combinatorial tests across data inputs and types.
+### Robust Cardinality Management
+- Built-in cardinalities such as `AnyNumber()`, `AtLeast()`, `AtMost()`, `Between()`, and `Exactly()` with precise semantic enforcement.
+- Support for custom cardinalities through implementing `CardinalityInterface`.
+- Detailed error reporting when expected call counts do not match actual calls, including upper-bound saturation and over-saturation.
 
-### Death Tests
-- Support for death tests (tests that verify program termination conditions) with `ASSERT_DEATH`, `EXPECT_DEATH` macros.
-- Multiple death test styles supported (`fast`, `threadsafe`), allowing adaptation to platform and test needs.
-- Improved integration to avoid deadlocks and hangs, with best practices outlined in advanced guides.
+### Improved Default Action Handling
+- `ON_CALL` allows setting default behaviors for mock methods without setting expectations on call counts.
+- Enforcement that each `ON_CALL` includes exactly one `.WillByDefault()` clause.
+- Clear precedence rules between `EXPECT_CALL` and `ON_CALL` behaviors.
 
-### Comprehensive Test Event Listening
-- Event listener API extended to observe test lifecycle events: start/end of test program, test suites, tests, and assertions.
-- Default listeners for console output, XML output, and optional streaming of results over network sockets for continuous integration environments.
+### Diagnostic and Logging Enhancements
+- Google Mock's log messages provide precise location reporting with stack traces based on verbosity settings (`info`, `warning`, `error`).
+- Uninteresting calls, unexpected calls, excessive calls, and unsatisfied expectations are reported with comprehensive diagnostics.
+- Configurable verbosity flags allow tailoring the amount of diagnostic output.
 
-### Improved Test Result Reporting
-- Rich metadata via `TestProperty` records for custom reporting.
-- Detailed timing, pass/fail/skipped counts at test, suite, and program levels.
-- XML output format customizable with output path and naming.
+### Thread Safety and Mock Lifecycle
+- All mock method registration, invocation, and verification are protected with a global mutex ensuring thread safety.
+- Automatic verification of expectations when mock objects are destructed with support for explicit verification and clearing via `Mock::VerifyAndClearExpectations()` and `Mock::VerifyAndClear()`.
+- Leakage detection of mock objects at program exit, with options to allow leaks using `Mock::AllowLeak()`.
 
-### Thread Safety and Concurrency
-- Expanded multi-threading support when platform pthreads or equivalent synchronization primitives are available.
-- ThreadLocal storage and mutex implementations for safe test execution.
-
-### Build System and Platform Support Enhancements
-- Extended platform coverage with explicit detection of environments supporting exceptions, RTTI, file system features, and threading.
-- Improved Windows support including Unicode `main()` argument handling and runtime linkage options.
-- Integration with Google’s internal CI and plans to adopt Abseil dependencies for future releases.
-
----
-
-## Practical Impact for Users
-
-Whether you are writing your first unit test or scaling to large, parameterized test suites, the recent updates bring clearer APIs, stronger type safety, improved cross-platform compatibility, and better tooling support. Test authors benefit from easier filtering and organization, and test runners can leverage enhanced event listeners to build integrations with dashboards and CI pipelines.
+### New API Usability and Flow Improvements
+- Seamless integration of implicit sequences via `InSequence` objects in test code, managing the order of expectations without manual sequence management.
+- Support for partial order call expectations using multiple `Sequence` objects and `After()` clauses.
+- Simplified macro-based expectation setting (`EXPECT_CALL`, `ON_CALL`) with enforcement of matching and ordering rules.
 
 ---
 
-## Examples of Usage for New Features
+## 2. Common Use Case Scenarios
 
-### Using `--gtest_filter` with Exclusion
+### Defining and Using Mocks
+- Define mock classes using `MOCK_METHOD` macros within `public` sections.
+- Use `EXPECT_CALL` to specify expected calls with argument matchers, call counts, and actions.
+- Use `ON_CALL` to set default actions when you do not require call count expectations.
 
-```bash
-./my_tests --gtest_filter="MyTestSuite.*-MyTestSuite.FlakyTest"
-```
-Runs all tests in `MyTestSuite` except tests named `FlakyTest`.
+### Controlling Uninteresting Calls
+- Choose between NiceMock, NaggyMock, and StrictMock wrappers to control treatment of uninteresting calls from silent acceptance to warning or failure.
+- Apply these wrappers directly on mock class instances to simplify test setup.
 
-### Writing a Value-Parameterized Test
+### Sequencing and Ordering Expectations
+- Use `InSequence` scopes or the `.InSequence()` clause to enforce order on calls.
+- Specify complex call dependencies with `.After()` clauses or multiple sequences.
+
+### Managing Cardinalities
+- Select appropriate cardinality constraints (`Times`, `AtLeast`, `AtMost`, etc.) to flexibly define expected call counts.
+- Interpret errors related to call count violations with detailed messaging.
+
+### Diagnosing Expectation Failures
+- Use `--gmock_verbose=info` for detailed call and expectation matching information.
+- Inspect warning and error messages that include file locations and call stacks for effective troubleshooting.
+
+### Verifying and Resetting Mocks
+- Trigger explicit verification and clearing of expectations and default actions with `Mock::VerifyAndClearExpectations()` and `Mock::VerifyAndClear()`.
+- Use `Mock::AllowLeak()` to intentionally exempt mock objects from leak detection.
+
+---
+
+## 3. Best Practices & Tips
+
+- Always define mock methods in the `public:` section of your mock classes.
+- Use `ON_CALL` to configure default behavior and reserve `EXPECT_CALL` for verification of expected calls.
+- Chain expectation clauses in the correct order for clarity and correctness.
+- Employ sequences and partial ordering to model required call order precisely.
+- Handle move-only types in mock methods naturally using `MOCK_METHOD` with no workaround needed for modern compilers.
+- Use verbosity flags to tune log output for debugging intermittent test failures.
+- Avoid mixing expectation declarations and mock method calls in an intertwined manner; set expectations before exercising mocks.
+
+---
+
+## 4. Troubleshooting Common Issues
+
+- **Unexpected Calls:** Occur when mock methods are called with arguments not matching any `EXPECT_CALL`. Inspect call arguments and expectations order.
+- **Uninteresting Calls:** Calls to mock methods without expectations produce warnings or errors based on the strictness of the mock wrapper.
+- **Excessive Calls:** Occur when the number of calls exceeds the specified cardinality.
+- **Unsatisfied Calls:** When expected calls are not made before mock destruction or explicit verification.
+- **Action Clause Errors:** Improper chaining or multiple clauses of `.Times()`, `.With()`, `.WillRepeatedly()` are detected and reported.
+- **Mock Leak Detection:** Mock objects not destroyed before program exit trigger failure unless suppressed by `AllowLeak()`.
+
+---
+
+## 5. Examples and Usage Snippets
 
 ```cpp
-class MyParamTest : public ::testing::TestWithParam<int> {};
+// Define a mock class
+class MockFoo {
+ public:
+  MOCK_METHOD(void, DoSomething, (int n), (override));
+  MOCK_METHOD(int, GetValue, (), (const, override));
+};
 
-TEST_P(MyParamTest, HandlesVariousValues) {
-  int value = GetParam();
-  EXPECT_GT(value, 0);
-}
+// Use NiceMock to suppress uninteresting call warnings
+using ::testing::NiceMock;
+NiceMock<MockFoo> mock_foo;
 
-INSTANTIATE_TEST_SUITE_P(PositiveInts, MyParamTest, ::testing::Values(1, 2, 3));
+// Set expectation for DoSomething to be called twice
+EXPECT_CALL(mock_foo, DoSomething(42)).Times(2).WillRepeatedly(Return());
+
+// Provide default action for GetValue
+ON_CALL(mock_foo, GetValue()).WillByDefault(Return(10));
+
+// Call mock methods
+mock_foo.DoSomething(42);
+int val = mock_foo.GetValue();
+
+// Verify expectations explicitly if needed
+ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_foo));
 ```
 
 ---
 
-## Troubleshooting Common Issues
+## 6. Related Documentation
 
-- **Failing to detect tests:** Ensure `InitGoogleTest()` is called before `RUN_ALL_TESTS()`.
-- **Build errors related to C++ version:** Verify your compiler meets the C++17 requirement.
-- **Conflicts with runtime libraries on Windows:** Use `gtest_force_shared_crt` CMake flag.
-- **Unexpected deadlocks or hangs in death tests:** Review platform-specific death test styles and consult death test documentation.
-
----
-
-## Related Documentation
-
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) - a starting point for writing tests.
-- [Assertions Reference](reference/assertions.md) - detailed guide to assertions.
-- [Parameterized Tests](api-reference/core-testing/test-parameterization.md) - writing tests with parameters.
-- [Death Tests Guide](guides/writing-effective-tests/death-tests.md) - specifics on death tests.
-- [Build Instructions](googletest/README.md) - building and integrating with CMake.
-- [Troubleshooting Build Systems](getting-started/troubleshooting/configuring-build-systems.md) - solving build configuration issues.
+- [Mocking Reference](../reference/mocking.md) — Properties of `EXPECT_CALL`, `ON_CALL`, matchers, actions, and cardinalities.
+- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md) — Quick syntax summary for defining mocks and expectations.
+- [gMock Cookbook](docs/gmock_cook_book.md) — Recipes and best practices for practical mocking.
+- [gMock for Dummies](docs/gmock_for_dummies.md) — Beginner-friendly guide to understanding mocks and expectations.
+- [Strict, Nice, and Naggy Mocks](concepts/mocking-strategies-extensibility/strictness-and-behavior.mdx) — Details on differing mock behaviors.
+- [Expectations and Sequences](api-reference/mocking-actions-matchers/expectations-and-sequences.mdx) — Reference for expectation order control.
+- [Actions and Cardinalities](concepts/mocking-strategies-extensibility/actions-cardinalities.mdx) — In-depth guide to specifying call count and behaviors.
 
 ---
 
-For the full release history and migration notes, visit the [Summary of Releases](releases-summary.md) and [Breaking Changes and Migration Notes](breaking-changes.md).
+For a comprehensive overview of how these components fit together, see the [System Architecture Overview](/overview/architecture-concepts/system-architecture).
+
+This page is part of the Changelog section in the documentation hierarchy, linked under [Release Highlights](/changelog/release-highlights/latest-release).
 
 ---
+
+_Last updated with changes from the main branch of GoogleTest._
